# glep

./: .gitignore  Cargo.toml  README.md  pyproject.toml
.github/workflows/: ci.yml  pages.yml  release.yml
bench/: bench.sh
claude/: SKILL.md  install.sh
claude/hooks/: glep_redirect.py  test_hook.sh
cursor/: install.sh
cursor/hooks/: glep_redirect.py  test_hook.sh
docs/superpowers/plans/: 2026-07-14-glep-v1.md  2026-07-16-perf-phase1.md  2026-07-16-phase2a-agent-coverage.md
docs/superpowers/specs/: 2026-07-14-glep-design.md
scripts/: repro_path_filters.sh
site/: index.html
src/: cli.rs  main.rs  plan.rs  search.rs  timing.rs  trigram.rs  walk.rs  walk_bulk.rs
src/index/: manifest.rs  mod.rs  postings.rs
tests/: cli.rs  freshness.rs  json_parity.rs  parity.rs
