[build-system]
requires = ["maturin>=1.5,<2.0"]
build-backend = "maturin"

[project]
name = "glep"
description = "Indexed grep + glob for AI agents"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
authors = [{ name = "anishfyi" }]
dynamic = ["version"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Topic :: Software Development",
    "Topic :: Text Processing :: Indexing",
    "Programming Language :: Rust",
]

[project.urls]
Homepage = "https://anishfyi.github.io/glep/"
Repository = "https://github.com/anishfyi/glep"

[tool.maturin]
bindings = "bin"
